snapshots/parsers/cst/if_statements/compiler_conditional_if_branches_do_not_consume_end_sub.snap
---
source: vb6parse/src/parsers/cst/if_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Octothorpe
              text: "#"
            - kind: IfStatement
              children:
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: ImplUseTls
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: IfStatement
                      children:
                        - kind: Whitespace
                          text: "    "
                        - kind: IfKeyword
                          text: If
                        - kind: Whitespace
                          text: " "
                        - kind: UnaryExpression
                          children:
                            - kind: NotKeyword
                              text: Not
                            - kind: Whitespace
                              text: " "
                            - kind: CallExpression
                              children:
                                - kind: MemberAccessExpression
                                  children:
                                    - kind: Identifier
                                      text: m_oSocket
                                    - kind: PeriodOperator
                                      text: "."
                                    - kind: Identifier
                                      text: Connect
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: MemberAccessExpression
                                          children:
                                            - kind: Identifier
                                              text: m_uRemote
                                            - kind: PeriodOperator
                                              text: "."
                                            - kind: Identifier
                                              text: Host
                                    - kind: Comma
                                      text: ","
                                    - kind: Whitespace
                                      text: " "
                                    - kind: Argument
                                      children:
                                        - kind: MemberAccessExpression
                                          children:
                                            - kind: Identifier
                                              text: m_uRemote
                                            - kind: PeriodOperator
                                              text: "."
                                            - kind: Identifier
                                              text: Port
                                    - kind: Comma
                                      text: ","
                                    - kind: Whitespace
                                      text: " "
                                    - kind: Argument
                                      children:
                                        - kind: Identifier
                                          text: UseTls
                                        - kind: ColonOperator
                                          text: ":"
                                        - kind: EqualityOperator
                                          text: "="
                                        - kind: CallExpression
                                          children:
                                            - kind: Identifier
                                              text: pvIsProtocolSecure
                                            - kind: LeftParenthesis
                                              text: (
                                            - kind: ArgumentList
                                              children:
                                                - kind: Argument
                                                  children:
                                                    - kind: MemberAccessExpression
                                                      children:
                                                        - kind: Identifier
                                                          text: m_uRemote
                                                        - kind: PeriodOperator
                                                          text: "."
                                                        - kind: Identifier
                                                          text: Protocol
                                            - kind: RightParenthesis
                                              text: )
                                - kind: RightParenthesis
                                  text: )
                        - kind: Whitespace
                          text: " "
                        - kind: ThenKeyword
                          text: Then
                        - kind: Newline
                          text: "\n"
                        - kind: StatementList
                          children: []
                        - kind: Octothorpe
                          text: "#"
                        - kind: ElseClause
                          children:
                            - kind: ElseKeyword
                              text: Else
                            - kind: Newline
                              text: "\n"
                            - kind: StatementList
                              children:
                                - kind: IfStatement
                                  children:
                                    - kind: Whitespace
                                      text: "    "
                                    - kind: IfKeyword
                                      text: If
                                    - kind: Whitespace
                                      text: " "
                                    - kind: UnaryExpression
                                      children:
                                        - kind: NotKeyword
                                          text: Not
                                        - kind: Whitespace
                                          text: " "
                                        - kind: CallExpression
                                          children:
                                            - kind: MemberAccessExpression
                                              children:
                                                - kind: Identifier
                                                  text: m_oSocket
                                                - kind: PeriodOperator
                                                  text: "."
                                                - kind: Identifier
                                                  text: Connect
                                            - kind: LeftParenthesis
                                              text: (
                                            - kind: ArgumentList
                                              children:
                                                - kind: Argument
                                                  children:
                                                    - kind: MemberAccessExpression
                                                      children:
                                                        - kind: Identifier
                                                          text: m_uRemote
                                                        - kind: PeriodOperator
                                                          text: "."
                                                        - kind: Identifier
                                                          text: Host
                                                - kind: Comma
                                                  text: ","
                                                - kind: Whitespace
                                                  text: " "
                                                - kind: Argument
                                                  children:
                                                    - kind: MemberAccessExpression
                                                      children:
                                                        - kind: Identifier
                                                          text: m_uRemote
                                                        - kind: PeriodOperator
                                                          text: "."
                                                        - kind: Identifier
                                                          text: Port
                                            - kind: RightParenthesis
                                              text: )
                                    - kind: Whitespace
                                      text: " "
                                    - kind: ThenKeyword
                                      text: Then
                                    - kind: Newline
                                      text: "\n"
                                    - kind: StatementList
                                      children: []
                                    - kind: Octothorpe
                                      text: "#"
                                    - kind: EndKeyword
                                      text: End
                                    - kind: Whitespace
                                      text: " "
                                    - kind: IfKeyword
                                      text: If
                                    - kind: Newline
                                      text: "\n"
                                - kind: OnErrorStatement
                                  children:
                                    - kind: Whitespace
                                      text: "        "
                                    - kind: OnKeyword
                                      text: "On"
                                    - kind: Whitespace
                                      text: " "
                                    - kind: ErrorKeyword
                                      text: Error
                                    - kind: Whitespace
                                      text: " "
                                    - kind: GotoKeyword
                                      text: GoTo
                                    - kind: Whitespace
                                      text: " "
                                    - kind: IntegerLiteral
                                      text: "0"
                                    - kind: Newline
                                      text: "\n"
                                - kind: Whitespace
                                  text: "        "
                                - kind: CallStatement
                                  children:
                                    - kind: Identifier
                                      text: Err
                                    - kind: PeriodOperator
                                      text: "."
                                    - kind: Identifier
                                      text: Raise
                                    - kind: Whitespace
                                      text: " "
                                    - kind: ArgumentList
                                      children:
                                        - kind: Argument
                                          children:
                                            - kind: IdentifierExpression
                                              children:
                                                - kind: Identifier
                                                  text: vbObjectError
                                        - kind: Comma
                                          text: ","
                                        - kind: Whitespace
                                          text: " "
                                        - kind: Argument
                                          children: []
                                        - kind: Comma
                                          text: ","
                                        - kind: Whitespace
                                          text: " "
                                        - kind: Argument
                                          children:
                                            - kind: CallExpression
                                              children:
                                                - kind: MemberAccessExpression
                                                  children:
                                                    - kind: Identifier
                                                      text: m_oSocket
                                                    - kind: PeriodOperator
                                                      text: "."
                                                    - kind: Identifier
                                                      text: GetErrorDescription
                                                - kind: LeftParenthesis
                                                  text: (
                                                - kind: ArgumentList
                                                  children:
                                                    - kind: Argument
                                                      children:
                                                        - kind: MemberAccessExpression
                                                          children:
                                                            - kind: Identifier
                                                              text: m_oSocket
                                                            - kind: PeriodOperator
                                                              text: "."
                                                            - kind: Identifier
                                                              text: LastError
                                                - kind: RightParenthesis
                                                  text: )
                                    - kind: Newline
                                      text: "\n"
                                - kind: Whitespace
                                  text: "    "
                        - kind: EndKeyword
                          text: End
                        - kind: Whitespace
                          text: " "
                        - kind: IfKeyword
                          text: If
                        - kind: Newline
                          text: "\n"
                    - kind: RaiseEventStatement
                      children:
                        - kind: Whitespace
                          text: "    "
                        - kind: RaiseEventKeyword
                          text: RaiseEvent
                        - kind: Whitespace
                          text: " "
                        - kind: Identifier
                          text: OperationStart
                        - kind: Newline
                          text: "\n"
                    - kind: ExitStatement
                      children:
                        - kind: Whitespace
                          text: "    "
                        - kind: ExitKeyword
                          text: Exit
                        - kind: Whitespace
                          text: " "
                        - kind: SubKeyword
                          text: Sub
                    - kind: Newline
                      text: "\n"
                    - kind: LabelStatement
                      children:
                        - kind: Identifier
                          text: EH
                        - kind: ColonOperator
                          text: ":"
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                    - kind: CallStatement
                      children:
                        - kind: Identifier
                          text: PrintError
                        - kind: Whitespace
                          text: " "
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: FUNC_NAME
                        - kind: Newline
                          text: "\n"
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: SubKeyword
                  text: Sub
                - kind: Newline
                  text: "\n"
